Terminado a falta de Test Unitarios

--- a/VocaliRestServer/VocaliRestServer.csproj
+++ b/VocaliRestServer/VocaliRestServer.csproj
@@ -41,6 +41,10 @@
       <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="SimpleLogger, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\SimpleLogger.1.0.0\lib\net40\SimpleLogger.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -53,7 +57,9 @@
   <ItemGroup>
     <Compile Include="BD.cs" />
     <Compile Include="Funciones.cs" />
+    <Compile Include="MockupServer.cs" />
     <Compile Include="Modelos\FicheroMP3.cs" />
+    <Compile Include="Modelos\RespuestaError.cs" />
     <Compile Include="Modelos\RespuestaTranscripcion.cs" />
     <Compile Include="Servicio.cs">
       <SubType>Component</SubType>
